# formaviva-desktop

./: .bumpversion.cfg  .dockerignore  .gitignore  Dockerfile  LICENSE  Makefile  README.md  formaviva_desktop.desktop  mkdocs.yml  org.atumm.formaviva_desktop.metainfo.xml  org.atumm.formaviva_desktop.yml  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml
.github/workflows/: build-appimage.yml  build-flatpak.yml  build-image.yml
docs/: contributing.md  formaviva_desktop.md  index.md  installation.md  usage.md
formaviva_desktop/: __init__.py  formaviva_desktop.py  main.py
tests/: __init__.py  test_formaviva_desktop.py
